--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB</title>
 </head>
-<body style="margin:0;padding:0; position: relative;min-height: 100vh;">
+<body style="margin:0;padding:0; position: relative;min-height: 100vh; box-sizing: border-box;">
     <header  style="background-color:#FF0000;height:70px;width:100%;"></header>
-    <footer style="background-color: #00FF00; height: 60px; width: 100%; text-align: center; position: absolute; bottom: 0;">Best School</footer>
+    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0;">
+        <div style="text-align: center; margin: 1rem 0;">Best School</div>
+    </footer>
 </body>
 </html>
