--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,7 +8,7 @@
 <body style="margin:0;padding:0;">
     <header  style="background-color:#FF0000;height:70px;width:100%;"></header>
     <footer style="background-color: #00FF00; height: 60px; width: 100%; position: fixed; bottom: 0;">
-        <div style="text-align: center; padding: 16px 0;">Best School</div>
+        <p style="text-align: center; line-height:25px;">Best School</p>
     </footer>
 </body>
 </html>
