--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -8,14 +8,9 @@
     <link rel="stylesheet" href="./styles/2-common.css">
     <link rel="stylesheet" href="./styles/2-header.css">
     <link rel="stylesheet" href="./styles/2-footer.css">
-    <!-- Favicon -->
-    <link rel="icon" href="./images/icon.png">
 </head>
 <body>
-    <header class="header">
-        <div class="logo-container">
-            <div class="logo"></div>
-        </div>
+    <header>
     </header>
     <footer>
         <p>Best School</p>
