--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -19,7 +19,9 @@
         </div>
     </header>
     <div class="container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae praesentium cum eveniet tempore repellat beatae sed quae assumenda labore deserunt eos laborum odit numquam repellendus quam provident hic, eius quod?
+        <section class="filters">
+            <button class="btn btn_search">search</button>
+        </section>
     </div>
     <footer>
         <p>Best School</p>
