--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/3-header.css">
     <link rel="stylesheet" href="./styles/3-footer.css">
     <link rel="stylesheet" href="./styles/6-filters.css">
+    <link rel="stylesheet" href="./styles/7-places.css">
     <!-- Favicon -->
     <link rel="icon" href="./images/icon.png">
 </head>
@@ -57,7 +58,21 @@
                 </ul>
             </div>
         </section>
-        <!-- End Search Bar-->
+        <!-- End Search Bar -->
+        <!-- Start Places -->
+        <section class="places clearfix">
+            <h1>places</h1>
+            <article class="place">
+                <h2>my home</h2>
+            </article>
+            <article class="place">
+                <h2>tiny house</h2>
+            </article>
+            <article class="place">
+                <h2>a suite</h2>
+            </article>
+        </section>
+        <!-- End Places -->
     </div>
     <footer>
         <p>Best School</p>
