--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -62,16 +62,17 @@
         <!-- Start Places -->
         <section class="places clearfix">
             <h1>places</h1>
-            <article class="place">
-                <h2>my home</h2>
+            <article class="place-home">
+                <h2>My home</h2>
             </article>
-            <article class="place">
-                <h2>tiny house</h2>
+            <article class="place-house">
+                <h2>Tiny house</h2>
             </article>
-            <article class="place">
-                <h2>a suite</h2>
+            <article class="place-suite">
+                <h2>A suite</h2>
             </article>
         </section>
+
         <!-- End Places -->
     </div>
     <footer>
