--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -62,17 +62,118 @@
         <!-- Start Places -->
         <section class="places clearfix">
             <h1>places</h1>
+            <!-- Home section -->
             <article class="place-home">
                 <h2>My home</h2>
+                <div class="price_by_night clearfix">
+                    $80
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        2 guests
+                    </div>
+                    <div class="number_rooms">
+                        1 bedrooms
+                    </div>
+                    <div class="number_bathrooms">
+                        1 bathrooms
+                    </div>
+                </div>
+                <div class="user">
+                    <p>
+                        <span class="text-bold">
+                        Owner</span>: Jhon Doe
+                    </p>
+                </div>
+                <div class="description">
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Culpa expedita eaque neque.
+                        Sunt deserunt animi odit.
+                        dolorum dolores architecto 
+                        omnis laudantium minus.
+                        Et eius provident omnis 
+                        laudantium fuga?
+                    </p>
+                </div>
             </article>
+            <!-- End Home section -->
+            <!-- House section -->
             <article class="place-house">
                 <h2>Tiny house</h2>
+                <div class="price_by_night clearfix">
+                    $65
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        2 guests
+                    </div>
+                    <div class="number_rooms">
+                        1 bedrooms
+                    </div>
+                    <div class="number_bathrooms">
+                        1 bathrooms
+                    </div>
+                </div>
+                <div class="user">
+                    <p>
+                        <span class="text-bold">
+                        Owner</span>: Jhon Doe
+                    </p>
+                </div>
+                <div class="description">
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Culpa expedita eaque neque.
+                        Sunt deserunt animi odit.
+                        dolorum dolores architecto 
+                        omnis laudantium minus.
+                        Et eius provident omnis 
+                        laudantium fuga?
+                    </p>
+                </div>
             </article>
+            <!-- End House section -->
+            <!-- Suite section -->
             <article class="place-suite">
                 <h2>A suite</h2>
+                <div class="price_by_night">
+                    $190
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        2 guests
+                    </div>
+                    <div class="number_rooms">
+                        1 bedrooms
+                    </div>
+                    <div class="number_bathrooms">
+                        1 bathrooms
+                    </div>
+                </div>
+                <div class="user">
+                    <p>
+                        <span class="text-bold">
+                        Owner</span>: Jhon Doe
+                    </p>
+                </div>
+                <div class="description">
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Culpa expedita eaque neque.
+                        Sunt deserunt animi odit.
+                        dolorum dolores architecto 
+                        omnis laudantium minus.
+                        Et eius provident omnis 
+                        laudantium fuga?
+                    </p>
+                </div>
             </article>
+            <!-- End Suite section -->
         </section>
-
         <!-- End Places -->
     </div>
     <footer>
