--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -175,11 +175,17 @@
                     <p>
                         Lorem ipsum dolor sit amet.
                         Lorem ipsum dolor sit amet.
-                    </p>
-                    <h3>From Bob Dylan the 27th January 2017</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet.
-                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet, consectetur 
+                        adipisicing elit. Dolorum consequatur 
+                        laboriosam ratione consectetur pariatur! 
+                        Dignissimos magni, atque numquam repellendus 
+                        eius corporis ab facere vero!
+                        Lorem ipsum dolor sit amet, consectetur 
+                        adipisicing elit. Dolorum consequatur 
+                        laboriosam ratione consectetur pariatur! 
+                        Dignissimos magni, atque numquam repellendus
+                        aperiam esse placeat voluptatum expedita quae, 
+                        eius corporis ab facere vero!
                     </p>
                 </div>
             </article>
@@ -231,13 +237,18 @@
                     </ul>
                 </div>
                 <div class="reviews">
-                    <h2>2 Reviews</h2>
+                    <h2>3 Reviews</h2>
                     <h3>From Bob Dylan the 27th January 2017</h3>
                     <p>
                         Lorem ipsum dolor sit amet.
                         Lorem ipsum dolor sit amet.
                     </p>
-                    <h3>From Bob Dylan the 27th January 2017</h3>
+                    <h3>From Jhon Doe the 20th January 2018</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                    <h3>From Jhon Doe the 5th January 2019</h3>
                     <p>
                         Lorem ipsum dolor sit amet.
                         Lorem ipsum dolor sit amet.
